# uwu-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
crates/uwu_cli/: Cargo.toml  README.md
crates/uwu_cli/src/: main.rs
crates/uwu_wasm/: Cargo.toml  README.md  build.bat  build.sh
crates/uwu_wasm/src/: lib.rs
src/: builder.rs  dict.rs  lib.rs
www/: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
www/src/: _theme.scss  app.html  app.scss  vite-env.d.ts
www/src/lib/components/: Footer.svelte  Translator.svelte
www/src/routes/: +layout.svelte  +page.svelte
