[package]
name = "uwu"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true

[features]

[dependencies]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sandro Marques <sandro123iv@gmail.com>"]
repository = "https://github.com/SandroHc/uwu"
documentation = "https://docs.rs/uwu/"
license = "MIT"

[workspace.dependencies]
uwu = { path = ".", version = "0.1.0" }
