[package]
name = "uwu"
description = "uwuifying library"
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
repository.workspace = true
readme = "README.md"
license.workspace = true

[features]

[dependencies]
aho-corasick = "1.1"
fastrand = { version = "2.0", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sandro Marques <sandro123iv@gmail.com>"]
repository = "https://github.com/SandroHc/uwu"
documentation = "https://docs.rs/uwu/"
license = "MIT"

[workspace.dependencies]
uwu = { path = ".", version = "0.1.0" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
