[package]
name = "uwu-rs"
description = "uwuifying library"
keywords = ["uwu", "owo"]
categories = ["algorithms", "text-processing", "command-line-utilities"]
repository = "https://github.com/SandroHc/uwu-rs"
documentation = "https://docs.rs/uwu-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]

[dependencies]
aho-corasick = "1.1"
fastrand = { version = "2.0", default-features = false }
thiserror = { workspace = true }
tracing = { workspace = true }

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Sandro Marques <sandro123iv@gmail.com>"]
license = "MIT"

[workspace.dependencies]
uwu-rs = { path = ".", version = "0.1.0" }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"
