[package]
name = "uwu_cli"
description = "uwuifying the terminal"
keywords = ["uwu", "owo", "cli"]
categories = ["algorithms", "text-processing", "command-line-utilities"]
repository = "https://github.com/SandroHc/uwu-rs/tree/master/crates/uwu_cli"
documentation = "https://docs.rs/uwu_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uwu-rs = { workspace = true }

[[bin]]
name = "uwu"
path = "src/main.rs"
